--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,11 @@ venv.bak/
 RespostaEX3.5/*
 Antigo/*
 *Icon*
+
+.nx/installation
+.nx/cache
+.nx/workspace-data
+
+
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
